    the discovered binary files. Closes: #554612
  * Remove extra quoting that should not be there while passing an exclude
    file to git ls-files during build of 3.0 (git) source package.
    Thanks to Courtney Bane for the patch. Closes: #551829
  * Optimize dpkg-source -b by avoiding many diff calls when not required.
    Thanks to Mike Hommey for the idea. Closes: #554689

  [ Updated dpkg translations ]
  * Czech (Miroslav Kure).
  * German (Sven Joachim).
  * Italian (Milo Casagrande). Closes: #548615
  * Polish (Wiktor Wandachowicz). Closes: #548541
  * Swedish (Peter Krefting).
  * French (Christian Perrier).

  [ Updated dselect translations ]
  * Czech (Miroslav Kure).
  * German (Sven Joachim).
  * Polish (Wiktor Wandachowicz). Closes: #548541
  * Swedish (Peter Krefting).
  * French (Christian Perrier).

  [ Updated man page translations ]
  * French translation error fixed (Christian Perrier)
    Thanks to Pietro Battiston for spotting it
    Closes: #545446
  * German (Helge Kreutzmann).
  * Polish (Wiktor Wandachowicz). Closes: #548541
  * Swedish (Peter Krefting).
  * French (Christian Perrier).

  [ Updated scripts translations ]
  * German (Helge Kreutzmann).
  * Polish (Wiktor Wandachowicz). Closes: #548541
  * Swedish (Peter Krefting).

 -- Guillem Jover <guillem@debian.org>  Sun, 06 Sep 2009 09:48:45 +0200

dpkg (1.15.4) unstable; urgency=low

  [ Guillem Jover ]
  * Call _g instead of g_ in dpkg-name.
  * Fix inverted logic when deciding to assume the architecture in dpkg-name
    when the package didn't have such field.
  * Do not take into account Revision and Package_Revision fields in dpkg-name
    and dpkg-scanpackages as they have been handled already by “dpkg-deb -I”.
  * Switch dpkg-scansources to use Dpkg::Cdata instead of duplicating the
    .dsc parsing code. As a side effect it now handles properly bogus files.
  * Do not remap obsolete fields in dpkg-scanpackages as they have been
    handled already by “dpkg-deb -I”.