@@ -63,6 +63,12 @@ the format indicated in \fBdebian/source/format\fP,
 extensive description of the various source package formats.
 
 .TP
+.RI "\fB\-\-print\-format\fP " directory
+Print the source format that would be used to build the source package if
+\fBdpkg\-source \-b \fIdirectory\fR was called (in the same conditions and
+with the same options).
+
+.TP
 .BR \-h ", " \-\-help
 Show the usage message and exit.
 .TP
