@@ -76,6 +76,8 @@ dpkg (1.15.5) UNRELEASED; urgency=low
     Thanks to Courtney Bane for the patch. Closes: #551829
   * Optimize dpkg-source -b by avoiding many diff calls when not required.
     Thanks to Mike Hommey for the idea. Closes: #554689
+  * Add new option --print-format to dpkg-source to be able to know by advance
+    the source format that would be used during a build.
 
   [ Updated dpkg translations ]
   * Czech (Miroslav Kure).
